@@ -1258,7 +1258,8 @@ function get_user_visible_users ($id_user = 0, $access = "IR", $only_name = true
 	
 	// Group All has id = 1
 	if (give_acl ($id_user, 1, $access) && $both) {
-		$users = get_db_all_rows_sql ("SELECT * FROM tusuario u WHERE u.id_usuario LIKE '%$search%' $proj_users_condition ORDER BY u.id_usuario");
+		$sql = sprintf('SELECT * FROM tusuario WHERE id_usuario LIKE "%s" ORDER BY id_usuario',"%$search%");
+		$users = get_db_all_rows_sql ($sql);
 		if ($users === false)
 			$users = array ();
 		foreach ($users as $user) {
@@ -1283,7 +1284,8 @@ function get_user_visible_users ($id_user = 0, $access = "IR", $only_name = true
 			$sql = sprintf ('SELECT *
 					FROM tusuario_perfil p, tusuario u
 					WHERE p.id_usuario = u.id_usuario
-					AND id_grupo = %d %s', $group['id_grupo'], $proj_users_condition);
+					AND u.id_usuario LIKE "%s" AND (id_grupo = %d %s)
+					ORDER BY u.id_usuario', "%$search%", $group['id_grupo'], $proj_users_condition);
 			$users = get_db_all_rows_sql ($sql);
 			if ($users === false)
 				continue;
@@ -1301,8 +1303,6 @@ function get_user_visible_users ($id_user = 0, $access = "IR", $only_name = true
 		}
 	}
 
-    // Order the array.
-    asort($values);
 	return $values;
 }
 
